--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-  "name": "rap2hpoutre/create-user-command",
+  "name": "andp97/create-user-command",
   "description": "Create a user with artisan command",
   "keywords": ["artisan", "laravel", "user", "create", "php"],
   "type": "library",
   "require": {
-    "php": ">=5.6.4",
-    "illuminate/support": "5.*",
-    "illuminate/console": "5.*"
+    "php": "^7.3|^8.0",
+    "illuminate/support": "^6|^7|^8",
+    "illuminate/console": "^6|^7|^8"
   },
   "autoload": {
     "psr-4": {
-      "Rap2hpoutre\\CreateUser\\": "src/"
+      "Andp97\\CreateUser\\": "src/"
     }
   },
   "minimum-stability": "stable",
@@ -19,6 +19,10 @@
     {
       "name": "rap2h",
       "email": "raphaelht@gmail.com"
+    },
+    {
+      "name": "andp97",
+      "email": "info@andreapavone.com"
     }
   ]
 }
